[gd_scene load_steps=2 format=3 uid="uid://3ao3jd6rudk5"]

[ext_resource type="Script" path="res://settings.gd" id="1_7eot7"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7eot7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 100.0
offset_top = 50.0
offset_right = 1050.0
offset_bottom = 600.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Settings"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
current_tab = 2

[node name="Controls" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
custom_minimum_size = Vector2(950, 450)
layout_mode = 2
metadata/_tab_index = 0

[node name="Key Binds Label" type="Label" parent="VBoxContainer/TabContainer/Controls"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Key Binds:"
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Controls"]
layout_mode = 2

[node name="Left" type="HBoxContainer" parent="VBoxContainer/TabContainer/Controls/GridContainer"]
custom_minimum_size = Vector2(950, 50)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Controls/GridContainer/Left"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
mouse_filter = 1
text = "Left
"
vertical_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/Controls/GridContainer/Left"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Right" type="HBoxContainer" parent="VBoxContainer/TabContainer/Controls/GridContainer"]
custom_minimum_size = Vector2(950, 50)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Controls/GridContainer/Right"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
text = "Right"

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/Controls/GridContainer/Right"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Jump" type="HBoxContainer" parent="VBoxContainer/TabContainer/Controls/GridContainer"]
custom_minimum_size = Vector2(950, 50)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Controls/GridContainer/Jump"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
text = "Jump
"

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/Controls/GridContainer/Jump"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Down" type="HBoxContainer" parent="VBoxContainer/TabContainer/Controls/GridContainer"]
custom_minimum_size = Vector2(950, 50)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Controls/GridContainer/Down"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
text = "Down?"

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/Controls/GridContainer/Down"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Use" type="HBoxContainer" parent="VBoxContainer/TabContainer/Controls/GridContainer"]
custom_minimum_size = Vector2(950, 50)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Controls/GridContainer/Use"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
text = "Use"

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/Controls/GridContainer/Use"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Attack" type="HBoxContainer" parent="VBoxContainer/TabContainer/Controls/GridContainer"]
custom_minimum_size = Vector2(950, 50)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Controls/GridContainer/Attack"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
text = "Attack"

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/Controls/GridContainer/Attack"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Dash" type="HBoxContainer" parent="VBoxContainer/TabContainer/Controls/GridContainer"]
custom_minimum_size = Vector2(950, 50)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Controls/GridContainer/Dash"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
text = "Dash"

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/Controls/GridContainer/Dash"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Audio" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
custom_minimum_size = Vector2(950, 450)
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Audio"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Audio/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(950, 50)
layout_mode = 2

[node name="Volume Label" type="Label" parent="VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Game Volume"

[node name="Volume_slider" type="HSlider" parent="VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer2"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(950, 50)
layout_mode = 2

[node name="Music Label" type="Label" parent="VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Music Volume"

[node name="Music_slider" type="HSlider" parent="VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(950, 50)
layout_mode = 2

[node name="Mute Button Label" type="Label" parent="VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer3"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Mute"

[node name="Mute_button" type="CheckBox" parent="VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer3"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2

[node name="Video" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
custom_minimum_size = Vector2(950, 450)
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Video"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Video/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Video/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(950, 50)
layout_mode = 2

[node name="Resolution Label" type="Label" parent="VBoxContainer/TabContainer/Video/MarginContainer/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
text = "Resolution"

[node name="Resolutions" type="OptionButton" parent="VBoxContainer/TabContainer/Video/MarginContainer/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/TabContainer/Video/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(950, 50)
layout_mode = 2

[node name="Fullscreen Button Label" type="Label" parent="VBoxContainer/TabContainer/Video/MarginContainer/GridContainer/HBoxContainer3"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
text = "Fullscreen"

[node name="Fullscreen_Checkbox" type="CheckBox" parent="VBoxContainer/TabContainer/Video/MarginContainer/GridContainer/HBoxContainer3"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2

[connection signal="value_changed" from="VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer2/Volume_slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer/Music_slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer/Music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer3/Mute_button" to="." method="_on_mute_button_toggled"]
[connection signal="item_selected" from="VBoxContainer/TabContainer/Video/MarginContainer/GridContainer/HBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="toggled" from="VBoxContainer/TabContainer/Video/MarginContainer/GridContainer/HBoxContainer3/Fullscreen_Checkbox" to="." method="_on_fullscreen_checkbox_toggled"]
